# Gophr

./: Gohpr.yaml  config_changelog.csv  gophr.yaml  gophr_sim_cores3.yaml
gophr_matter/: CMakeLists.txt  build_and_flash.txt  partitions.csv  sdkconfig.defaults
gophr_matter/main/: CMakeLists.txt  gophr_drivers.c  gophr_drivers.h  gophr_main.cpp  gophr_matter.cpp  gophr_matter.h  gophr_sensors.h  gophr_sleep.c  gophr_sleep.h  idf_component.yml
gophr_sim/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
gophr_sim/main/: CMakeLists.txt  Kconfig.projbuild  gophr_buzzer.c  gophr_buzzer.h  gophr_display.c  gophr_display.h  gophr_encoder.c  gophr_encoder.h  gophr_logo.c  gophr_logo.h  gophr_main.c  gophr_mqtt.c  gophr_mqtt.h  gophr_touch.c  gophr_touch.h  gophr_ui.c  gophr_ui.h  gophr_ui_styles.c  gophr_ui_styles.h  gophr_wifi.c  gophr_wifi.h  idf_component.yml
gophr_zigbee/: CMakeLists.txt  build_and_flash.txt  partitions.csv  sdkconfig.defaults
gophr_zigbee/main/: CMakeLists.txt  gophr_drivers.c  gophr_drivers.h  gophr_main.c  gophr_sensors.c  gophr_sensors.h  gophr_sleep.c  gophr_sleep.h  gophr_zigbee.c  gophr_zigbee.h  idf_component.yml
